--- a/Lab4/MainWindow.xaml
+++ b/Lab4/MainWindow.xaml
@@ -2,12 +2,25 @@
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+        xmlns:ScottPlot="clr-namespace:ScottPlot.WPF;assembly=ScottPlot.WPF"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:Lab4"
-        mc:Ignorable="d"
-        Title="" Height="450" Width="800">
+        mc:Ignorable="d" ResizeMode="NoResize"
+        Title="" Height="600" Width="1200">
     <Grid>
-        <TabControl Name="Tabs"  HorizontalAlignment="Left" VerticalAlignment="Top" Margin="10">
+        <ScottPlot:WpfPlot Height="200" Width="400" Margin="50" VerticalAlignment="Bottom" HorizontalAlignment="Left" Name="OrdersPlot"></ScottPlot:WpfPlot>
+        <Grid Margin="0,25,50,0" Width="500" MaxHeight="600" VerticalAlignment="Top" HorizontalAlignment="Right">
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="*"/>
+                <ColumnDefinition Width="110"/>
+            </Grid.ColumnDefinitions>
+            <DataGrid Name="QueriesGrid" MaxHeight="300" AutoGenerateColumns="True">
+
+            </DataGrid>
+            <Button Grid.Column="1" Content="Виконати запит" Height="30" Margin="10,0,0,0" 
+                    Click="DoQuery"/>
+        </Grid>
+        <TabControl Name="Tabs"  HorizontalAlignment="Left" VerticalAlignment="Top" Margin="10" MaxHeight="300">
             <TabItem Name="UsersTab" Header="Користувачі">
                 <Grid>
                     <Grid.RowDefinitions>
